styles/_profile.scss
// Profile
// New Profile
.web3-profile {
  padding: 2rem;

  @media screen and (max-width: $size-md) {
    padding: 1rem;
  }

  .web3bio-custom {
    background-color: $light-color;
    background-size: cover;
    display: block;
    filter: blur(4rem);
    height: 100vh;
    left: 0;
    opacity: .05;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: -1;
  }
}

.web3-profile-base {
  margin: .5rem;
  padding-bottom: 1rem;
  position: sticky;
  top: 2.5rem;

  .profile-avatar {
    align-items: center;
    border-radius: 50%;
    box-shadow: inset 0 0 0 .2rem rgba($light-color, .1);
    display: flex;
    height: 9rem;
    justify-content: center;
    width: 9rem;

    .avatar {
      box-shadow: 0 .4rem 1rem rgba(0, 0, 0, .1);
      height: 9rem;
      position: relative;
      width: 9rem;
      z-index: -1;
    }
  }

  .profile-name {
    color: $dark-color;
    font-size: 1.8rem;
    font-weight: 800;
    line-height: 1.25;
    margin-bottom: .5rem;
    margin-top: 1rem;
    max-width: 600px;
  }

  .profile-identity {
    align-items: center;
    color: $gray-color-dark;
    display: flex;
    margin-bottom: 1rem;
    font-size: .6rem;
    line-height: 1rem;

    .action {
      color: $gray-color;
      cursor: pointer;
      flex: 0 1;
      height: 1rem;
      margin-left: .2rem;
      position: relative;
      transition: all .2s ease-in-out;
      width: 1rem;

      &:focus,
      &:hover {
        color: $dark-color;
      }
    }
  }

  .profile-description {
    font-size: .9rem;
    font-weight: 400;
    line-height: 1.5;
    margin-bottom: 1rem;
    max-width: 20rem;
  }

  .profile-location {
    margin-bottom: .5rem;
  }

  .profile-email {
    margin-bottom: 1rem;
    vertical-align: middle;

    a {
      border-bottom: .05rem dashed;
      text-decoration: none;

      &:focus,
      &:hover {
        border-bottom: .05rem solid;
      }
    }
  }
}

.web3-section-title {
  font-size: .9rem;
  font-weight: 500;
  margin-top: 1rem;
  padding: 1rem 1.5rem;
}
/* ... */

